Name color, link & animation
Animation in the background and on the welcome text. color and link in the name.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benjamin</title>
     <link rel="stylesheet" href="CSS & JS/1.css" />
+    <!-- general google front: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- from here: font-family: 'Zen Tokyo Zoo', cursive; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap"
+      rel="stylesheet"
+    />
+    <!-- from here: font-family: "Otomanopee One", sans-serif; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap"
+      rel="stylesheet"
+    />
+    <!-- from here:  font-family: "Marcellus SC", serif; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap"
+      rel="stylesheet"
+    />
+    <!-- from here: font-family: 'Satisfy', cursive; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <!--  -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
+      rel="stylesheet"
+    />
+    <!--  -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="name">Hello, I'm Benjamin</div>
+    <div class="float"></div>
+    <div class="name">
+      <span class="welcome-message"
+        >Hello, I'm
+        <span class="span-name">
+          <a href="https://github.com/BenjaminIsMyName" target="_blank"
+            >Benjamin</a
+          ></span
+        ></span
+      >
+    </div>
   </body>
   <footer><script src="CSS & JS/1.js"></script></footer>
 </html>
