Added "Contact" button and more changes
Removed transition, removed infinite background animation (to once), added Contact button and more

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         ></span
       >
     </div>
+    <div class="contact">
+      <a href="https://t.me/MyUsernameIsRECURSION" target="_blank">
+        Let's Talk</a
+      >
+    </div>
   </body>
   <footer><script src="CSS & JS/1.js"></script></footer>
 </html>
