Added second screen

--- a/index.html
+++ b/index.html
@@ -6,35 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benjamin</title>
     <link rel="stylesheet" href="CSS & JS/1.css" />
-    <!-- general google front: -->
+    <!-- google front: -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- from here: font-family: 'Zen Tokyo Zoo', cursive; -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap"
-      rel="stylesheet"
-    />
-    <!-- from here: font-family: "Otomanopee One", sans-serif; -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap"
-      rel="stylesheet"
-    />
-    <!-- from here:  font-family: "Marcellus SC", serif; -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap"
-      rel="stylesheet"
-    />
-    <!-- from here: font-family: 'Satisfy', cursive; -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
-      rel="stylesheet"
-    />
-    <!--  -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
-      rel="stylesheet"
-    />
-    <!--  -->
     <link
       href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap"
       rel="stylesheet"
@@ -44,18 +18,22 @@
     <div class="float"></div>
     <div class="name">
       <span class="welcome-message"
-        >Hello, I'm
+        >Hey, I'm
         <span class="span-name">
-          <a href="https://github.com/BenjaminIsMyName" target="_blank"
-            >Benjamin</a
-          ></span
-        ></span
-      >
+          <!-- <a href="https://github.com/BenjaminIsMyName" target="_blank"> -->
+          Benjamin
+          <!-- </a>-->
+ 
     </div>
     <div class="contact">
       <a href="https://t.me/MyUsernameIsRECURSION" target="_blank">
         Let's Talk</a
       >
+      <div class="second">
+        <div class="who">Who am I?</div>
+        <p class="who">I'm a programmer and work with Java, Python, JS, CSS, React and others.</p>
+        <p class="who">I like <span class="gradient">beautiful UI</span> and love perfect UX.</p>
+      </div>
     </div>
   </body>
   <footer><script src="CSS & JS/1.js"></script></footer>
