Better on smaller screens

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         Let's Talk</a
       >
       <div class="second">
+        <div class="container">
         <div class="who">Who am I?</div>
         <p class="who">I'm a programmer and work with Java, Python, JS, CSS, React and others.</p>
         <p class="who">I like <span class="gradient">beautiful UI</span> and love perfect UX.</p>
       </div>
+    </div>
     </div>
   </body>
   <footer><script src="CSS & JS/1.js"></script></footer>
