Changed 'orange' to 'pink'
1. Changed the 'orange' theme to a 'pink' theme.
2. Added icon to the page.
3. A few more little improvements.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Benjamin</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./Highlight/styles/gradient-dark.min.css" />
+    <link rel="icon" href="./Icons/icon.png"/>
   </head>
   <body>
     <div class="first">
@@ -186,7 +187,7 @@ def check_id_number(id_number):
         <button class="theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
         <button class="theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
         <button class="theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
-        <button class="theme" id="orange" onclick="changeTheme('orange')" aria-label="Orange theme"/>
+        <button class="theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
       </div>
     </div>
 
