Added another web project

--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@ def check_id_number(id_number):
             </p>
             </details>
             <details>
-              <summary>Title about the thing I did</summary>
-              <p>Ok, so here is what I did, and here's the code:</p>
+              <summary>About Israeli prime ministers, in Hebrew</summary>
+              <p>   
+                <a href="https://benjaminismyname.github.io/PM/" target="_blank" rel="noreferrer">VIEW SITE</a>
+            </p>
             </details>
             <details>
               <summary>Title about the thing I did</summary>
