Added animation to the 'themes buttons' with IntersectionObserver

--- a/index.html
+++ b/index.html
@@ -185,11 +185,13 @@ def check_id_number(id_number):
           </div>
       </div>
       <!-- themes: -->
-      <div class="theme-container">
-        <button class="theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
-        <button class="theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
-        <button class="theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
-        <button class="theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
+      <div class="theme-external-container">
+        <div class="theme-container">
+          <button class="theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
+          <button class="theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
+          <button class="theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
+          <button class="theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
+        </div>
       </div>
     </div>
 
