Changed Telegram icon to SVG
1. Changed Telegram icon in 'Contact' button to SVG.
2. Improved the 'Contact' button  animation while hover.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     </div>
     <div class="second">
       <a href="https://t.me/MyUsernameIsRECURSION" target="_blank" rel="noreferrer" class="contact">
-        <div class="img"></div>
-          <span>Let's Talk</span>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
+          <path d="M-17828.316,11091.994l-9.5-11.069a2.989,2.989,0,0,1-.037-.494,3.183,3.183,0,0,1,.111-.755l12.209-13.913-14.1,9.516a2.744,2.744,0,0,1-.74.124,3.275,3.275,0,0,1-.937-.181l-.018-.012-8.664-10.321,34.688-7.89-.027.088.074-.057.266.767-13.318,34.2v0Z" transform="translate(17849.998 -11056.999)"/>
+        </svg>
+        <span>Let's Talk</span>
       </a>
       <div class="work">
         <h1>Things I did....</h1>
