--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@ def check_id_number(id_number):
       <!-- themes: -->
       <div class="theme-external-container">
         <div class="theme-container">
-          <button class="theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
-          <button class="theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
-          <button class="theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
-          <button class="theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
+          <button class="theme" title="Green theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
+          <button class="theme" title="Teal theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
+          <button class="theme" title="Blue theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
+          <button class="theme" title="Pink theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
         </div>
       </div>
     </div>
