Better & safer HTML

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="My Portfolio.">
     <title>Benjamin</title>
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="second">
-      <a href="https://t.me/MyUsernameIsRECURSION" target="_blank" rel="noreferrer" class="contact">
+      <a rel="noopener" href="https://t.me/MyUsernameIsRECURSION" target="_blank" rel="noreferrer" class="contact">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
           <path d="M-17828.316,11091.994l-9.5-11.069a2.989,2.989,0,0,1-.037-.494,3.183,3.183,0,0,1,.111-.755l12.209-13.913-14.1,9.516a2.744,2.744,0,0,1-.74.124,3.275,3.275,0,0,1-.937-.181l-.018-.012-8.664-10.321,34.688-7.89-.027.088.074-.057.266.767-13.318,34.2v0Z" transform="translate(17849.998 -11056.999)"/>
         </svg>
@@ -138,13 +138,13 @@ def check_id_number(id_number):
             <details>
               <summary>Convert Celsius to Fahrenheit and vice versa</summary>
               <p>   
-                <a href="https://benjaminismyname.github.io/Celsius/" target="_blank" rel="noreferrer">VIEW SITE</a>
+                <a rel="noopener" href="https://benjaminismyname.github.io/Celsius/" target="_blank" rel="noreferrer">VIEW SITE</a>
             </p>
             </details>
             <details>
               <summary>About Israeli prime ministers, in Hebrew</summary>
               <p>   
-                <a href="https://benjaminismyname.github.io/PM/" target="_blank" rel="noreferrer">VIEW SITE</a>
+                <a rel="noopener" href="https://benjaminismyname.github.io/PM/" target="_blank" rel="noreferrer">VIEW SITE</a>
             </p>
             </details>
             <details>
@@ -189,10 +189,10 @@ def check_id_number(id_number):
       <!-- themes: -->
       <div class="theme-external-container">
         <div class="theme-container">
-          <button class="theme" title="Green theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
-          <button class="theme" title="Teal theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
-          <button class="theme" title="Blue theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
-          <button class="theme" title="Pink theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
+          <button type="button" class="theme" title="Green theme" id="default" onclick="changeTheme('')" aria-label="Default theme"/>
+          <button type="button" class="theme" title="Teal theme" id="teal" onclick="changeTheme('teal')" aria-label="Teal theme"/>
+          <button type="button"  class="theme" title="Blue theme" id="blue" onclick="changeTheme('blue')" aria-label="Blue theme"/>
+          <button type="button" class="theme" title="Pink theme" id="pink" onclick="changeTheme('pink')" aria-label="Pink theme"/>
         </div>
       </div>
     </div>
